# Build-a-Creature

./: Balrog.cpp  Balrog.h  BaseClass.cpp  BaseClass.h  CMakeLists.txt  Creature.cpp  Creature.h  Cyberdemon.cpp  Cyberdemon.h  Demon.cpp  Demon.h  DerivedClass.cpp  DerivedClass.h  Elf.cpp  Elf.h  Human.cpp  Human.h  main.cpp
